# machine-learning-qa

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  app.py  chroma_test.py  llm_base.csv  llm_chroma.csv  llm_no_rag.csv  pyproject.toml  report.qmd  test.py  test_bs.py
data/dump/: simplewiki-20240201-pages-articles-multistream-index.txt  simplewiki-20240201-pages-articles-multistream.xml.bz2
src/: __init__.py  condensation.py
src/extraction/: __init__.py  bz2_extraction.py  const.py  xml_extraction.py
wikicleaner/: Cargo.toml
wikicleaner/src/: lib.rs
