[tool.poetry]
name = "qa-llm"
version = "0.1.0"
description = ""
authors = ["archstation <ejovo13@yahoo.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.22"
icecream = "^2.1.3"
xmltodict = "^0.13.0"
wikicleaner = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
