[tool.poetry]
name = "qa-llm"
version = "0.1.0"
description = ""
authors = ["archstation <ejovo13@yahoo.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.22"
icecream = "^2.1.3"
xmltodict = "^0.13.0"
wikicleaner = "^0.1.5"
nltk = "^3.8.1"
beautifulsoup4 = "^4.12.3"
polars = "^0.20.8"
pydantic-settings = "^2.1.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
openai = "^1.12.0"
datasets = "^2.17.0"
duckduckgo-search = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
